--- a/src/components/ProgressBar/progressBar.css
+++ b/src/components/ProgressBar/progressBar.css
@@ -1,26 +1,17 @@
-/* .jumping-cat--jump {
-    animation: jump 0.5s ease-in-out;
-  }
   
-  @keyframes jump {
-    0% {
-      transform: translateY(0);
-    }
-    50% {
-      transform: translateY(-20px);
-    }
-    100% {
-      transform: translateY(0);
-    }
-  } */
-  
-  .jumping-cat {
+  /*shoe animation */
+  .shoe {
     position: absolute;
     bottom: -14px;
-    transition: left 0.1s ease-in-out;
+    right: 3px;
+    transition:  0.3s ease-out;
     z-index: 999;
   }
   
+  
   .css-1jrtelv{
-    background-color: #8B4513 !important;
+    background-color: #8B4513 !important;/*progress bar color */
+    transition-duration: 1s ;/*progress bar speed*/
+    transition-property: all !important;
   }
+
