--- a/src/components/ProgressBar/progressBar.css
+++ b/src/components/ProgressBar/progressBar.css
@@ -12,7 +12,7 @@
   
   
   .css-1jrtelv{
-    background-color: #ad03a0!important;/*progress bar color */
+    background-color: #F0B2BE!important;/*progress bar color */
     transition-duration: 1s ;/*progress bar speed*/
     transition-property: all !important;
   }
